--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "raw-loader": "^4.0.2",
     "rellax": "^1.12.1",
     "style-loader": "^2.0.0",
+    "swiper": "^7.0.6",
     "three": "^0.126.0",
     "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
